--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <div class = 'box'>
-        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+    </div>
+    <div class = 'box'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+    </div>
+    <div class = 'box'>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
     </div>
 </body>
 </html>
