--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+    <p class = 'menu'>Our Menu</p>
     <div class = 'box'>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
     </div>
