--- a/site/index.html
+++ b/site/index.html
@@ -9,14 +9,30 @@
 </head>
 <body>
     <p class = 'menu'>Our Menu</p>
-    <div class = 'box'>
+    <div class = 'row'>
+    <div class = "box col-sm-12 col-md-6 col-lg-4">
+        <div class = 'chicken'>
+            Chicken
+        </div>
+        <div class = 'text'>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+        </div>
     </div>
-    <div class = 'box'>
+    <div class = "box col-sm-12 col-md-6 col-lg-4">
+        <div class = 'beef'>
+            Beef
+        </div>
+        <div class = 'text'>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+        </div>
     </div>
-    <div class = 'box'>
+    <div class = "box col-sm-12 col-lg-4">
+        <div class = 'sushi'>
+            Sushi
+        </div>
+        <div class = 'text'>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
-    </div>
+        </div>
+    </div></div>
 </body>
 </html>
