--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
             Chicken
         </div>
         <div class = 'text'>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur 1 similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
         </div>
     </div>
     <div class = "box col-sm-12 col-md-6 col-lg-4">
@@ -23,7 +23,7 @@
             Beef
         </div>
         <div class = 'text'>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur 1 similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
         </div>
     </div>
     <div class = "box col-sm-12 col-lg-4">
@@ -31,7 +31,7 @@
             Sushi
         </div>
         <div class = 'text'>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur 1 similique quaerat beatae veniam illum voluptatibus repudiandae accusantium suscipit, impedit dolores ex esse voluptatum repellat perferendis voluptatem veritatis laboriosam, ea eligendi!
         </div>
     </div></div>
 </body>
